--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,14 @@
   <title>ComponenteDans</title>
   <base href="/">
 
+<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <script src="../node_modules/jquery/dist/jquery.js"></script>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 </html>
